# opencv_cpp

./: 2-1.cpp  2-3.cpp  CMakeLists.txt  imshow.cpp  video_capture.cpp
